# WMS-SAEP-v2

./: .coderabbit-opengrep-fallback.yml  .coderabbit.yaml  AGENTS.md  CONTEXT.md  Makefile  README.md  manage.py  package-lock.json  package.json  pyproject.toml
.claude/: launch.json
.design/: INFORMATION_ARCHITECTURE.md
.design/movimentacoes-estoque/: DESIGN_BRIEF.md  TASKS.md
.design/saida-excepcional/: DESIGN_BRIEF.md
.design/topbar/: DESIGN_BRIEF.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
apps/accounts/: admin.py  forms.py  managers.py  models.py  papeis.py  policies.py  services.py  views.py
apps/core/: listagem.py  presentation.py  tests.py  views.py
apps/estoque/: admin.py  forms.py  models.py  policies.py  selectors.py  services.py  types.py  urls.py  views.py
apps/notificacoes/: admin.py  selectors.py  views.py
apps/requisicoes/: admin.py  context_processors.py  forms.py  models.py  policies.py  selectors.py  services.py  transitions.py  types.py  urls.py  views.py
config/: urls.py
config/settings/: base.py  dev.py  test.py
docs/: checklist-go-live.md  ci-pipeline.md  design-system.md  estado-transicoes-requisicao.md  matriz-invariantes.md  matriz-permissoes.md  processos-almoxarifado.md  processos-saida-excepcional.md
docs/adr/: 0004-arquitetura-em-camadas.md  0011-contrato-services-policies-excecoes.md  0012-ci-strategy.md  0013-saida-excepcional-fluxo-proprio-estoque.md  (+3 more)
tests/: test_ci_workflow.py
(+174 files in other folders)
